fix: upsell button visibility by adding missing CSS and using standard hide class

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,10 @@
   display: none;
 }
 
+.hide_upsell2 {
+  display: none;
+}
+
 
 /* Facebook Comment Lines */
 .fb-reply-line {
